--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vinyl-source-stream": "^2.0.0"
   },
   "dependencies": {
+    "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
