--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "gulp && cp index.html /var/www/html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
